# RayTracer

./: .gitignore  CMakeLists.txt  Camera.h  Color.h  Geometry.h  Matrix.h  Output.h  Point.h  Ray.h  RayTracer.cpp  RayTracer.h  Utils.h  Vector.h  main.cpp  prettyPicture.cpp
Color/: CMakeLists.txt  Color.h
Environment/: CMakeLists.txt  Environment.cpp  Environment.h
Geometry/: BoundedPlane.cpp  BoundedPlane.h  CMakeLists.txt  Geometry.h  GeometryBuilder.cpp  GeometryBuilder.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
Image/: CMakeLists.txt  Image.h
Image/Image_Writers/: CMakeLists.txt  ImageWriterBuilder.cpp  ImageWriterBuilder.h  ImageWriter_I.h  PNGImageWriter.cpp  PNGImageWriter.h  PPMImageWriter.cpp  PPMImageWriter.h
Linear_Algebra/: CMakeLists.txt  LinearAlgebraTypeTraits.h  Matrix_MxN.h  Point_X.h  Ray.h  Vector_X.h
Scene/: CMakeLists.txt  Camera.h  Scene.h  Screen.h
Utility/: CMakeLists.txt  Endian.h  LinearAlgebraJsonParser.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Random_Number_Generator.h
config/: environment_config.json  output_config.json  ray_tracer_parameters.json  scene_config.json
